@@ -11,7 +11,6 @@ silence_warnings { RAILS_ENV = "test" }
 require 'test/unit'
 require 'action_controller/test_process'
 require 'action_controller/integration'
-#require 'action_web_service/test_invoke'
 require 'breakpoint'
 require 'mocha'
 require 'stubba'
