@@ -1,4 +1,5 @@
 TRUNK
+  - recognized NetBSD as a platform
 
 ------------------------------------------------------------------------------------------------------------------------
 * 1.1.0
